--- a/marketing/src/sections/navigation/MiroNav/MiroNav.css
+++ b/marketing/src/sections/navigation/MiroNav/MiroNav.css
@@ -14,7 +14,6 @@
 }
 
 .container {
-    padding: 10px 0px;
     background-color: #ffffff;
     position: relative;
 }
@@ -33,7 +32,7 @@
 }
 
 .product-open {
-    text-decoration: underline blue;
+    border-bottom: 1px solid blue;
 
 }
 
