--- a/marketing/src/sections/navigation/MiroNav/MiroNavMenu/MiroNavMenu.css
+++ b/marketing/src/sections/navigation/MiroNav/MiroNavMenu/MiroNavMenu.css
@@ -15,7 +15,7 @@
     transform: scaleY(1);
 }
 
-.miroNavMenu-container {
+.miroNavMenu .miroNavMenu-container {
     padding: 40px 0px;
     max-width: 1420px;
     margin: 0 auto;
@@ -30,41 +30,41 @@
     border: none;
 }
 
-.miroNavMenu-container p {
+.miroNavMenu .miroNavMenu-container p {
     margin-top: 10px;
     color: #a2a2a2;
     font-size: 1rem;
 }
 
 
-.miroNavMenu-productOption {
+.miroNavMenu .miroNavMenu-productOption {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     column-gap: 20px;
     row-gap: 10px;
 }
 
-.miroNavMenu-productOption>div {
+.miroNavMenu .miroNavMenu-productOption>div {
     padding: 10px;
     width: 180px;
     height: 100px;
     border-radius: 10px;
 }
 
-.phroduct-header {
+.miroNavMenu .miroNavMenu .phroduct-header {
     margin-top: 0;
     padding-left: 10px;
 }
 
-.miroNavMenu-productOption>div:hover {
+.miroNavMenu .miroNavMenu-productOption>div:hover {
     background-color: #e5e5e5a9;
 }
 
-.miroNavMenu-productOption a {
+.miroNavMenu .miroNavMenu-productOption a {
     font-size: 1.2rem;
 }
 
-.miroNavMenu-newOption {
+.miroNavMenu .miroNavMenu-newOption {
     background-color: #fbe6e5;
     padding: 30px;
     border-radius: 15px;
@@ -72,28 +72,28 @@
     height: 350px;
 }
 
-.miroNavMenu-newOption-content {
+.miroNavMenu .miroNavMenu-newOption-content {
     display: flex;
     margin-bottom: 40px;
     gap: 40px;
 }
 
-.miroNavMenu-newOption-content img {
+.miroNavMenu .miroNavMenu-newOption-content img {
     height: 70px;
     width: auto;
     border-radius: 15px;
 }
 
-.miroNavMenu-newOption-content a {
+.miroNavMenu .miroNavMenu-newOption-content a {
     font-size: 1.4rem;
 }
 
-.miroNavMenu-newOption-content p {
+.miroNavMenu .miroNavMenu-newOption-content p {
     margin-top: 5px;
     font-size: 1rem;
 }
 
-.see-change {
+.miroNavMenu .see-change {
     font-size: 1.3rem;
     border-bottom: 1px solid #4262ff !important;
     color: #4262ff !important;
@@ -103,22 +103,22 @@
     border-bottom: none !important;
 }
 
-.contact-sales {
+.miroNavMenu .contact-sales {
     max-width: 1420px;
     margin: 0 auto;
     padding-bottom: 18px;
 }
 
-.contact-sales a {
+.miroNavMenu .contact-sales a {
     font-size: 1.3rem;
     border-bottom: 1px solid #4262ff !important;
     color: #4262ff !important;
 }
 
-.contact-sales a:hover {
+.miroNavMenu .contact-sales a:hover {
     border-bottom: none !important;
 }
 
-.right-arrow {
+.miroNavMenu .right-arrow {
     color: #4262ff !important;
 }
