--- a/marketing/src/sections/navigation/MiroNav/MiroNav.css
+++ b/marketing/src/sections/navigation/MiroNav/MiroNav.css
@@ -18,6 +18,7 @@
 .container {
     background-color: #ffffff;
     position: relative;
+    border-bottom: 1px solid;
 }
 
 .miro-nav-container a {
