Completed the KongNav responsive navigation clone

--- a/marketing/src/sections/navigation/KongNav/KongNav.css
+++ b/marketing/src/sections/navigation/KongNav/KongNav.css
@@ -5,6 +5,7 @@ nav.kongnav {
     justify-content: space-between;
     align-items: center;
     gap: 20px;
+
 }
 
 .kongnav-container {
@@ -12,6 +13,7 @@ nav.kongnav {
     position: fixed;
     left: 0;
     right: 0;
+    top: 0;
 }
 
 .kongnav>div:first-child {
@@ -125,10 +127,28 @@ nav.kongnav {
 }
 
 .kong-dullBackground {
+    margin: 0;
     z-index: -10;
     background-color: #00000099;
 }
 
 .kong-brightBackground {
+    margin: 0;
     background-color: white;
+}
+
+.responsive-kong-nav {
+    display: none;
+}
+
+.kong-sub-link-list {
+    display: none;
+}
+
+.sub-nav-content {
+    display: none;
+}
+
+.sub-nav-prod-header {
+    display: none;
 }
