--- a/marketing/src/sections/navigation/BlueSimple/BlueSimple.css
+++ b/marketing/src/sections/navigation/BlueSimple/BlueSimple.css
@@ -1,42 +1,67 @@
-.blue-simple {
-    max-width: 1200px;
-    margin: 0 auto;
+.blue-simple-container {
+    border-bottom: 1px solid;
+    background-color: #eee;
 }
 
-.blue-simple-nav {
+.blue-simple-container .blue-simple {
+    max-width: 1200px;
+    margin: 0 auto;
+
+}
+
+.blue-simple-container .blue-simple-nav {
     display: flex;
     align-items: center;
     gap: 80px;
     font-size: 1.5rem;
+    justify-content: center;
+
 }
 
-.blue-simple-nav a {
+.blue-simple-container .blue-simple-nav a {
     position: relative;
     text-decoration: none;
     color: black;
 }
 
-.features {
-    position: absolute;
-    left: 0;
+.features .features-title {
+    padding-bottom: 5px;
+    transform-origin: left center;
+    transition: .1s;
+
 }
 
-.features-option {
+.features .features-menu-inactive {
+    border-bottom: none;
+
+}
+
+.features .features-menu-active {
+    border-bottom: 3px solid blue;
+}
+
+.features .feature-menu {
+    top: 22px;
+    position: absolute;
+    left: -128px;
+}
+
+.features .features-option {
     margin-top: 20px;
     display: flex;
 }
 
 
-.features-option li {
+.features .features-option li {
     display: flex;
     align-items: flex-start;
 }
 
-.features-option li>div {
+.features .features-option li>div {
     font-weight: bold;
 }
 
-.features-option-item p {
+.features .features-option-item p {
     font-weight: normal;
     margin-top: 2px;
     color: #b6b6b7;
@@ -55,6 +80,7 @@
 
 
 .features-option>ul {
+    background-color: #ffffff;
     list-style: none;
     width: 500px;
     height: 620px;
@@ -67,7 +93,7 @@
     margin-bottom: 12px;
 }
 
-.typsetting-status {
+.features .typsetting-status {
     margin-left: 20px;
     border: 1px solid;
     padding: 2px 10px;
@@ -78,16 +104,16 @@
 }
 
 
-.features-option>ul:first-child {
+.features .features-option>ul:first-child {
     border-top-left-radius: 15px;
 }
 
-.features-option>ul:last-child {
+.features .features-option>ul:last-child {
     border-top-right-radius: 15px;
 }
 
 
-.feature-footer {
+.features .feature-footer {
     height: 100px;
     border: 2px solid #efefef;
     border-bottom-left-radius: 15px;
@@ -99,14 +125,19 @@
     background-color: #f9f9f9;
 }
 
-.demo-video {
+.features .demo-video {
     border: 2px solid #d5d5d5;
     border-radius: 25px;
     padding: 10px 15px;
     background-color: #ffff;
 }
 
-.ready-started>div:first-child {
+.features .demo-video:hover {
+    background-color: blue;
+    color: wheat;
+}
+
+.features .ready-started>div:first-child {
     font-weight: bold;
 }
 
@@ -114,32 +145,6 @@
     color: gray;
 }
 
-/* .navBar-content>div:first-child {
-    display: flex;
-
+.responsive-blue-simple {
+    display: none;
 }
-
-.navBar-content>div:first-child>div {
-    border: 1px solid;
-    width: 50%;
-    padding: 20px;
-}
-
-.navBar-options {
-    transition: .4s all;
-}
-
-.navBar-options:hover {
-    background-color: rgb(182, 181, 181);
-}
-
-.navBar-options h3 {
-    margin-bottom: 0;
-    font-size: 1.5rem;
-}
-
-.navBar-options p {
-    margin-top: 0;
-    font-size: 1.2rem;
-    color: rgb(139, 138, 138);
-} */
