--- a/marketing/src/sections/navigation/MiroNav/MiroNavMenu/MiroNavMenu.css
+++ b/marketing/src/sections/navigation/MiroNav/MiroNavMenu/MiroNavMenu.css
@@ -15,7 +15,7 @@
     transform: scaleY(1);
 }
 
-.miro-nav-menu .miroNavMenu-container {
+.miro-nav-menu .miro-nav-container {
     padding: 40px 0px;
     max-width: 1420px;
     margin: 0 auto;
@@ -30,41 +30,41 @@
     border: none;
 }
 
-.miro-nav-menu .miroNavMenu-container p {
+.miro-nav-menu .miro-nav-container p {
     margin-top: 10px;
     color: #a2a2a2;
     font-size: 1rem;
 }
 
 
-.miro-nav-menu .miroNavMenu-productOption {
+.miro-nav-menu .miro-nav-prod-opt {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     column-gap: 20px;
     row-gap: 10px;
 }
 
-.miro-nav-menu .miroNavMenu-productOption>div {
+.miro-nav-menu .miro-nav-prod-opt>div {
     padding: 10px;
     width: 180px;
     height: 100px;
     border-radius: 10px;
 }
 
-.miro-nav-menu .phroduct-header {
+.miro-nav-menu .product-header {
     margin-top: 0;
     padding-left: 10px;
 }
 
-.miro-nav-menu .miroNavMenu-productOption>div:hover {
+.miro-nav-menu .miro-nav-prod-opt>div:hover {
     background-color: #e5e5e5a9;
 }
 
-.miro-nav-menu .miroNavMenu-productOption a {
+.miro-nav-menu .miro-nav-prod-opt a {
     font-size: 1.2rem;
 }
 
-.miro-nav-menu .miroNnav-menu-new-option {
+.miro-nav-menu .miro-nav-menu-new-option {
     background-color: #fbe6e5;
     padding: 30px;
     border-radius: 15px;
@@ -72,13 +72,13 @@
     height: 350px;
 }
 
-.miro-nav-menu .miroNnav-menu-new-option-content {
+.miro-nav-menu .miro-nav-menu-new-option-content {
     display: flex;
     margin-bottom: 40px;
     gap: 40px;
 }
 
-.miro-nav-menu .miroNnav-menu-new-option-content img {
+.miro-nav-menu .miro-nav-menu-new-option-content img {
     height: 75px;
     width: 200px;
     outline: none;
@@ -87,11 +87,11 @@
     background-color: #eee;
 }
 
-.miro-nav-menu .miroNnav-menu-new-option-content a {
+.miro-nav-menu .miro-nav-menu-new-option-content a {
     font-size: 1.4rem;
 }
 
-.miro-nav-menu .miroNnav-menu-new-option-content p {
+.miro-nav-menu .miro-nav-menu-new-option-content p {
     margin-top: 5px;
     font-size: 1rem;
 }
